# my-app

./: compose.yaml  test.http
backend/: dockerfile  pyproject.toml
backend/apps/: database.py  main.py  models.py  schemas.py
frontend/: dockerfile  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: page.tsx
frontend/app/components/: AddTask.tsx  TodoList.tsx
frontend/src/component/todolist/: todoList.tsx
frontend/src/pages/: index.tsx
